objects/Requests__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Inventory Tracking</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Check_Date__c</fullName>
        <label>Compliance Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <formula>IF( ISPICKVAL(Request_Status__c , &quot;Completed&quot;) , null , TODAY() - Date_Requested__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Processed__c</fullName>
        <formula>Date_Completed__c - Date_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Completion__c</fullName>
        <label>Expected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Solution_Due_Date__c</fullName>
        <label>IT Solution Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IT_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Solution</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issues_Results_Comments__c</fullName>
        <label>Issues/Results/Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
                <value>
                    <fullName>4 - Long Term</fullName>
                </value>
                <value>
                    <fullName>5 - On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Identification_Due_Date__c</fullName>
        <label>Process Identification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Identification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Identification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>PI In Progress</fullName>
                </value>
                <value>
                    <fullName>PI Complete</fullName>
                </value>
                <value>
                    <fullName>IT In Progress</fullName>
                </value>
                <value>
                    <fullName>IT Complete</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <inlineHelpText>Depends on Category</inlineHelpText>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Design Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>CAD Templates</fullName>
                </value>
                <value>
                    <fullName>Standards</fullName>
                </value>
                <value>
                    <fullName>Product Review</fullName>
                </value>
                <value>
                    <fullName>Structure</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Due_Date__c</fullName>
        <label>Training Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>x1Open</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Outstanding__c</columns>
        <columns>Expected_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Salesforce</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>1 - Salesforce</label>
    </listViews>
    <listViews>
        <fullName>x2OnHold</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Outstanding__c</columns>
        <columns>Expected_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Inventory Tracking</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>2 - Inventory</label>
    </listViews>
    <listViews>
        <fullName>x3Completed</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Outstanding__c</columns>
        <columns>Expected_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Contracts</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>3 - Contracts</label>
    </listViews>
    <listViews>
        <fullName>x4NotCancelledorCompleted</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Outstanding__c</columns>
        <columns>Expected_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Communication</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>4 - Communication</label>
    </listViews>
    <listViews>
        <fullName>x5Technology</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Outstanding__c</columns>
        <columns>Expected_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>5 - Technology</label>
    </listViews>
    <listViews>
        <fullName>x6CompletedThisMonth</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Processed__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Completed__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>6 - Completed This Month</label>
    </listViews>
    <listViews>
        <fullName>x7OpenThisMonth</fullName>
        <booleanFilter>( 1 OR 3 ) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Expected_Completion__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expected_Completion__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Expected_Completion__c</field>
            <operation>equals</operation>
        </filters>
        <label>7 - Open This Month</label>
    </listViews>
    <listViews>
        <fullName>x8Completed</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Days_Processed__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>8 - Completed</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Requests</fullName>
        <active>true</active>
        <label>Requests</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>